# spotdw

./: .gitignore  README.md  pyproject.toml
scripts/: download_spot.slurm  pansharpen.slurm  pansharpen_jz.slurm
src/spotdw/: __init__.py  download.py  pansharpen.py  run.py  scraper.py  scraper_utils.py
src/spotdw/config/: config.yaml  download_config.yaml  pansharpen_config.yaml
