[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spotdw"
readme = "README.md"
authors = [
    {name = "Fajwel Fogel", email = "fajwel.fogel@ens.fr"},
]

requires-python = ">=3.10"
license = {"file" = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
"attrs",
"certifi",
"charset-normalizer",
"click",
"click-plugins",
"cligj",
"fiona",
"geopandas",
"idna",
"importlib-metadata",
"numpy",
"packaging",
"pandas",
"pyproj",
"python-dateutil",
"pytz",
"requests",
"shapely",
"six",
"tzdata",
"urllib3",
"zipp",
]

[tool.flit.module]
name = "spotdw"

[tool.isort]
profile = "black"
line_length = 110

[tool.black]
line-length = 110
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = 3.11
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
ignore_missing_imports = true
